--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,24 +1,21 @@
-<!-- <section class="is-column"> -->
-  <div class="hello-container is-column gap-16">
-    <span class="hello">
-      Hey {{userService.currentUser()?.pseudo}} 👋
-      ​</span>
-    <button class="logout" (click)="userService.logout()">logout</button>
-  </div>
+<div class="hello-container is-column gap-16">
+  <span class="hello">
+    Hey {{userService.currentUser()?.pseudo}} 👋
+  </span>
+  <button class="logout" (click)="userService.logout()">logout</button>
+</div>
 
-  <div class="vote-container is-column">
-    <h2>Bayrou miss you ?</h2>
-    <div class="is-row gap-16">
-      <div class="yes">YES</div>
-      <div class="no">NO</div>
-    </div>
+<div class="vote-container is-column">
+  <h2>Bayrou miss you ?</h2>
+  <div class="is-row gap-16">
+    <div class="yes" (click)="vote('Yes')">YES</div>
+    <div class="no" (click)="vote('No')">NO</div>
   </div>
-<!-- </section> -->
-
+</div>
 
 <h2>Results</h2>
 <ul>
-  @for (vote of voteService.votes(); track vote) {
+  @for (vote of voteService.votes().reverse(); track vote) {
   <li>{{vote.pseudo}} voted {{vote.vote}}</li>
   }
 </ul>
