--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+html,
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+input {
+    padding: 8px 16px;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+}
+
+.is-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.is-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.gap-8 {
+    gap: 8px;
+}
+
+.gap-16 {
+    gap: 16px;
+}
+
+button {
+    padding: 8px 16px;
+    border-radius: 8px;
+    border: none;
+    background-color: grey;
+    color: white;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: green;
+}
