--- a/frontend/src/app/components/vote/vote.component.html
+++ b/frontend/src/app/components/vote/vote.component.html
@@ -1,5 +1,5 @@
 <div class="vote-container is-column">
-  <h2>Bayrou miss you ?</h2>
+  <h2>Do you miss Bayrou ?</h2>
 
   @if (voteService.hasAlreadyVoted()) {
     <p>Nice try ! You already voted !</p>
